--- a/noyman_click.html
+++ b/noyman_click.html
@@ -3,7 +3,9 @@
     <style>
       h1{
         direction: rtl;
-        
+        text-align:center;
+        font-family:calibri;
+        font-size:50px;
       }
     </style>
   </head>
