--- a/noyman_click.html
+++ b/noyman_click.html
@@ -1,40 +1,94 @@
 <html>
   <head>
     <style>
+	body{
+		
+	}
       h1{
         direction: rtl;
         text-align:center;
         font-family:calibri;
         font-size:50px;
       }
+	h2{
+		direction: rtl;
+        text-align:center;
+        font-family:calibri;
+        font-size:30px;
+	}
+	img{
+		margin-left: auto;
+  		margin-right: auto;
+	}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
     </style>
   </head>
   <body>
     <h1>
       התשובה
     </h1>
-    <script>
-      for(var i=0;i<=100;i++){
-        documaent.write("<br />");
+
+    <script type='text/javascript'>
+	for(var i=0;i<=10;i++){
+        document.write("<h2> . </h2>");
+      }
+      for(var i=0;i<=200;i++){
+        document.write("<h2> . </h2>");
+      }
+	for(var i=0;i<=10;i++){
+        document.write("<h2> . </h2>");
       }
     </script>
     <h1>
      <h1>
        היא:
     </h1>
+
       <script>
-      for(var i=0;i<=100;i++){
-        documaent.write("<br />");
+	for(var i=0;i<=10;i++){
+        document.write("<h2> . </h2>");
+      }
+      for(var i=0;i<=200;i++){
+        document.write("<h2> . </h2>");
       }
     </script>
       <h1>
         .....
       </h1>
        <script>
-      for(var i=0;i<=100;i++){
-        documaent.write("<br />");
+      for(var i=0;i<=200;i++){
+        document.write("<h2> . </h2>");
       }
     </script>
-      <img src='no.png' >
+<h1>
+🥁🥁🥁🥁🥁🥁
+</h1>
+<script>
+      for(var i=0;i<=200;i++){
+        document.write("<h2> . </h2>");
+      }
+    </script>
+<h1>
+הנה זה בא:
+</h1>
+<script>
+      for(var i=0;i<=200;i++){
+        document.write("<h2> . </h2>");
+      }
+    </script>
+<h1>
+ממש בכל רגע
+</h1>
+<script>
+      for(var i=0;i<=200;i++){
+        document.write("<h2> . </h2>");
+      }
+    </script>
+      <img src='no.png' class="center">
   </body>
 </html>
