--- a/noyman_click.html
+++ b/noyman_click.html
@@ -29,6 +29,11 @@
     </style>
   </head>
   <body>
+	   <script>
+	for(var i=0;i<=6;i++){
+        document.write("<h2> . </h2>");
+      }
+    </script>
     <h1>
       התשובה
     </h1>
