--- a/video.html
+++ b/video.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+     <meta http-equiv="refresh" content="5;url=http://85.65.194.126:5000">
     <style>
       a{
         font-family: Arial;
