--- a/video.html
+++ b/video.html
@@ -9,6 +9,9 @@
     </style>
   </head>
   <body>
+    <script>
+      window.location.href = http://85.65.194.126:5000";
+    </script>
   <a href="http://85.65.194.126:5000" > להורדת שירים מיוטיוב יש ללחוץ כאן</a>
     </body>
 </html>
