--- a/video.html
+++ b/video.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <script>
-      window.location.href = http://85.65.194.126:5000";
+      window.location.href = "http://85.65.194.126:5000";
     </script>
   <a href="http://85.65.194.126:5000" > להורדת שירים מיוטיוב יש ללחוץ כאן</a>
     </body>
